# simple-api-rust-axum

./: Cargo.toml  Makefile  README.md  Todo.postman_collection.json
src/: handler.rs  main.rs  model.rs  response.rs  route.rs
